# MarketConnectionLibrary

./: .gitignore
Project/: Cargo.toml
Project/examples/: main.rs
Project/src/: Binance_Exchange_Listener.rs  DataPacket.rs  DataStructure.rs  ExchangeListener.rs  ExchangeListenerSpecific.rs  Main.rs  MarketData.rs  Subscription.rs  SubscriptionManager.rs  TradeData.rs  WebSocket.rs  binance_exchange_listener.rs  data_packet.rs  exchange_listener.rs  huobi_exchange_listener.rs  lib.rs  main.rs  market_data.rs  trade_data.rs  web_socket.rs
Project/src/exchange_listener/: binance_exchange_listener.rs  exchange_listener.rs  huobi_exchange_listener.rs
Resources/: links.md
TestingArea/BinanceConnection/src/: main.rs
TestingArea/RedoingWSConnection/: Cargo.toml
TestingArea/RedoingWSConnection/src/: main.rs
TestingArea/binanceconnectionv2/src/: main.rs
TestingArea/flate2test/: Cargo.toml
TestingArea/huobiTesting/: Cargo.toml
TestingArea/huobiconnection/: Cargo.toml
TestingArea/huobiconnection/src/: main.rs
TungsteniteTesting/: Cargo.toml
market_connection_library/: Cargo.toml
testing_area/binanceconnectionv2/: Cargo.toml
testing_area/binanceconnectionv2/src/: main.rs
testing_area/flate2test/src/: main.rs
testing_area/huobi_authentication/: main.py
testing_area/huobiconnection/src/: main.rs
