[package]
name = "market_connection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "example"
path = "examples/main.rs"

[dependencies]
queues = "1.0.2"
tungstenite = { version = "0.20.0", features = ["native-tls"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
url = "2.2.2"
futures-util = "0.3"
futures = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
async-trait = "0.1"
flate2 = "1.0"
reqwest = { version = "0.11", features = ["json"] }
hmac-sha256 = "0.1"
hex = "0.4"
chrono = "0.4"
urlencoding = "1.0"
http = "0.2"
base64 = "0.13.0"
hmac = "0.11"
sha2 = "0.9"