[package]
name = "huobiconnection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
queues = "1.0.2"
tungstenite = { version = "0.20.0", features = ["native-tls"] }
url = "2.2"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"